Added figures to language modeling post. Added title images to two posts. Updated CSS a little. Proofread language modeling post.

--- a/docs/assets/css/screen.css
+++ b/docs/assets/css/screen.css
@@ -899,3 +899,13 @@ iframe {
     opacity: 0;
     transition: opacity .25s;
 }
+
+.image-caption {
+  text-align: center;
+  font-size: .8rem;
+  color: light-grey;
+}
+
+.article-img {
+  text-align: center;
+}
